# graphrag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: ontology.yaml
data/: renewable_energy.txt
docs/adr/: 001-graph-database-choice.md  002-strict-ontology-schema.md
src/: analysis.py  app.py  config.py  database.py  ingestion.py  query_engine.py  visualizer.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_graph_integration.py  test_graph_pipeline.py
tests/unit/: test_config.py  test_ingestion.py
