[project]
name = "simple-graphrag-demo"
version = "0.1.0"
description = "GraphRAG demo using LlamaIndex, Neo4j, and Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.11.0",
    "llama-index-graph-stores-neo4j>=0.3.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",
    "neo4j>=5.0.0",
    "graphdatascience>=1.7",
    "streamlit>=1.28.0",
    "pyvis>=0.3.0",
    "python-dotenv>=1.0.0",
    "graphdatascience>=1.7.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.12.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers[neo4j]>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Reglas estrictas: pyflakes, pycodestyle, isort, flake8-bugbear, pyupgrade, bandit, comprehensions, pathlib
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "PTH"]
# Evitar reglas que entran en conflicto con el formatter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignorar imports no usados en __init__.py
"__init__.py" = ["F401"]
# Allow assert in tests
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
